# duskhaven-launcher-2

./: addons.html  dockerfile  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: addons.css  addons.ts  grid.css  i18n.ts  main.ts  patch.d.ts  styles.css
src-tauri/: 2  Cargo.toml  install_vc_redist.wxs  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: main.rs
src/i18n/: en.json
