[package]
name = "duskhaven-launcher"
version = "2.0.8"
description = "Launcher for duskhaven wow server"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] } # for our async runtime
reqwest = "0.11"
ring = "0.17.7"
hex = "0.4.3"
regex = "1.10.3"
sha2 = "0.10.8"
fern = "0.6"
chrono = "0.4"
log = "0.4"
env_logger = "0.11.2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
